[gd_scene load_steps=2 format=3 uid="uid://c8c6hup4apt5q"]

[ext_resource type="Script" path="res://Scenes/Equipment/EquipmentTransferUI.gd" id="1_x0xps"]

[node name="EquipmentTransferUI" type="CanvasLayer"]
script = ExtResource("1_x0xps")

[node name="LeftItemList" type="ItemList" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.4
anchor_bottom = 0.8
theme_override_constants/h_separation = 10
allow_reselect = true
max_columns = 3
same_column_width = true
icon_mode = 0

[node name="RightItemList" type="ItemList" parent="."]
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.8
theme_override_constants/h_separation = 10
allow_reselect = true
max_columns = 3
same_column_width = true
icon_mode = 0

[node name="DoubleClickTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.875
anchor_right = 0.3
anchor_bottom = 0.972
offset_left = -0.480001
offset_top = -6.10352e-05
offset_right = 0.47998
offset_bottom = 0.159973
theme_override_constants/separation = 350

[node name="BackButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[connection signal="item_clicked" from="LeftItemList" to="." method="_on_left_item_list_item_clicked"]
[connection signal="item_clicked" from="RightItemList" to="." method="_on_right_item_list_item_clicked"]
